--- a/po/wesnoth-lib/fr.po
+++ b/po/wesnoth-lib/fr.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth_Lib-1.12\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-21 21:30+0300\n"
-"PO-Revision-Date: 2018-09-12 18:03+0200\n"
+"PO-Revision-Date: 2019-02-02 18:44+0100\n"
 "Last-Translator: Gérard Bodin <gbodin.qc@gmail.com>\n"
 "Language-Team: French <wesnoth@ml.free.fr>\n"
 "Language: fr\n"
@@ -250,11 +250,6 @@ msgstr "Sables du désert"
 
 #. [terrain_type]: id=desert
 #: data/core/terrain.cfg:298
-#, fuzzy
-#| msgid ""
-#| "<italic>text='Deserts'</italic> have a somewhat different composition "
-#| "than small sand pits or beaches, however for gameplay purposes they are "
-#| "identical. See <ref>dst='terrain_sand' text='sand'</ref>."
 msgid ""
 "<italic>text='Deserts'</italic> have a somewhat different composition than "
 "small sand pits or beaches, however for gameplay purposes they are "
@@ -262,7 +257,7 @@ msgid ""
 msgstr ""
 "Les <italic>text='déserts'</italic> sont en réalité assez différents des "
 "plages et des petites étendues de sables, mais pour le jeu il n'y a aucune "
-"différence. Voir <ref>dst='terrain_sand' text='sable'</ref>."
+"différence. Voir <ref>dst='..terrain_sand' text='sable'</ref>."
 
 #. [terrain_type]: id=sand_beach
 #. [terrain_type]: id=sand
@@ -2529,10 +2524,8 @@ msgstr "Difficulté"
 
 #. [scroll_label]: id=message
 #: data/gui/window/campaign_difficulty.cfg:73
-#, fuzzy
-#| msgid "Select difficulty level:"
 msgid "Select difficulty:"
-msgstr "Sélectionnez un niveau de difficulté :"
+msgstr "Sélectionnez la difficulté :"
 
 #. [label]
 #: data/gui/window/chat_log.cfg:36
@@ -4580,7 +4573,7 @@ msgstr "Filtre : "
 #. [text_box]: id=filter
 #: data/gui/window/preferences/02_hotkeys.cfg:67
 msgid "Filters on hotkey description."
-msgstr ""
+msgstr "Filtre sur la description des raccourcis clavier."
 
 #. [toggle_button]: id=sort_0
 #: data/gui/window/preferences/02_hotkeys.cfg:111
@@ -5103,7 +5096,6 @@ msgstr "Loc"
 
 #. [label]
 #: data/gui/window/terrain_layers.cfg:69
-#, fuzzy
 msgid "Layer"
 msgstr "Couche"
 
@@ -5124,7 +5116,6 @@ msgstr "Centre"
 
 #. [label]
 #: data/gui/window/terrain_layers.cfg:339
-#, fuzzy
 msgid "Terrain Layers"
 msgstr "Couches de terrain"
 
@@ -5969,10 +5960,8 @@ msgid "The game data cache could not be purged."
 msgstr "Le cache des données du jeu ne peut pas être purgé."
 
 #: src/gui/dialogs/game_load.cpp:264
-#, fuzzy
-#| msgid "The selected game has no sides!"
 msgid "The selected file is corrupt: "
-msgstr "Le jeu sélectionné n'a pas de camps !"
+msgstr "Le fichier sélectionné est corrompu :"
 
 #: src/gui/dialogs/game_load.cpp:343
 msgid "(Invalid)"
@@ -6640,7 +6629,6 @@ msgstr ""
 "identique."
 
 #: src/gui/widgets/stacked_widget.cpp:278
-#, fuzzy
 msgid "No stack layers defined."
 msgstr "Aucune pile de couches définie."
 
