updated Italian translation

--- a/po/wesnoth-dm/it.po
+++ b/po/wesnoth-dm/it.po
@@ -1,12 +1,12 @@
 # translation of it.po to Italian
-# Antonio Rosella <arosella@yahoo.com>, 2011-2018
+# Antonio Rosella <arosella@yahoo.com>, 2011-2019
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-12 17:01 UTC\n"
-"PO-Revision-Date: 2018-04-11 13:12+0200\n"
+"PO-Revision-Date: 2019-01-28 21:19+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italiano <wesnoth-l10n-it@cirulla.net>\n"
 "Language: it\n"
@@ -14,7 +14,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [campaign]: id=Delfadors_Memoirs
 #: data/campaigns/Delfadors_Memoirs/_main.cfg:22
@@ -74,7 +74,7 @@ msgstr ""
 #. [campaign]: id=Delfadors_Memoirs
 #: data/campaigns/Delfadors_Memoirs/_main.cfg:37
 msgid "(Intermediate level, 19 scenarios.)"
-msgstr "(Livello intermedio, 19 scenari)"
+msgstr "(Livello intermedio, 19 scenari.)"
 
 #. [about]
 #: data/campaigns/Delfadors_Memoirs/_main.cfg:40
@@ -180,7 +180,7 @@ msgstr ""
 #. [part]
 #: data/campaigns/Delfadors_Memoirs/scenarios/01_Overture.cfg:53
 msgid "<i>The New Mage Ceremony</i>"
-msgstr " <i>La cerimonia del nuovo mago</i>"
+msgstr "<i>La cerimonia del nuovo mago</i>"
 
 #. [part]
 #: data/campaigns/Delfadors_Memoirs/scenarios/01_Overture.cfg:56
@@ -205,12 +205,12 @@ msgstr "Accademia di magia, isola di Anduin."
 #: data/campaigns/Delfadors_Memoirs/scenarios/01_Overture.cfg:135
 #: data/campaigns/Delfadors_Memoirs/scenarios/01_Overture.cfg:144
 msgid "... thorum restro targa thorum..."
-msgstr " ...thorum restro targa thorum... "
+msgstr "...thorum restro targa thorum..."
 
 #. [message]: speaker=Marshal
 #: data/campaigns/Delfadors_Memoirs/scenarios/01_Overture.cfg:91
 msgid "Come, O aspirant. The Oracles await you."
-msgstr "Fatti avanti, aspirante. Gli oracoli ti aspettano"
+msgstr "Fatti avanti, aspirante. Gli oracoli ti aspettano."
 
 #. [message]: speaker=First Oracle
 #: data/campaigns/Delfadors_Memoirs/scenarios/01_Overture.cfg:113
@@ -254,7 +254,7 @@ msgid ""
 "life. I call the power of the Bright Gods into your name: DELFADOR"
 msgstr ""
 "Dopo la battaglia, pace. Dopo l’oscurità, aurora. Dalla morte sorge nuova "
-"vita. Invoco il potere degli Dei Luminosi nel tuo nome: DELFADOR."
+"vita. Invoco il potere degli Dei Luminosi nel tuo nome: DELFADOR"
 
 #. [message]: speaker=Marshal
 #: data/campaigns/Delfadors_Memoirs/scenarios/01_Overture.cfg:149
@@ -842,7 +842,7 @@ msgstr ""
 "Certo – conosci qualche altro re con quel nome? Sono stato uno dei "
 "consiglieri più fidati di suo padre finché non è trapassato all’inizio di "
 "quest’anno, e ho ancora l’attenzione di suo figlio,  anche se essendo "
-"giovane forse non mi ascolta attentamente come dovrebbe!"
+"giovane forse non mi ascolta attentamente come dovrebbe."
 
 #. [scenario]: id=05_Council_in_Weldyn
 #: data/campaigns/Delfadors_Memoirs/scenarios/05_Council_in_Weldyn.cfg:3
@@ -1539,7 +1539,7 @@ msgid ""
 msgstr ""
 "Il colpo interruppe la meditazione di Delfador. Cominciò a cadere, ma prima "
 "che la sua testa raggiunse il terreno scomparve come se non fosse mai stato "
-"lì. "
+"lì."
 
 #. [objective]: condition=win
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:93
@@ -2382,7 +2382,7 @@ msgstr ""
 "dove si può attraversare il fiume. Subito dopo che l’ultimo Re di Wesnoth "
 "iniziò il suo regno, mise una forte guarnigione a sud non lontano da qui "
 "nella città di Parthyn, e gli orchi non hanno più potuto giungere a Wesnoth "
-"da questa parte del fiume da allora. "
+"da questa parte del fiume da allora."
 
 #. [message]: id=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/12_Terror_at_the_Ford_of_Parthyn.cfg:252
@@ -2672,7 +2672,7 @@ msgstr "Angedd"
 #. [message]: speaker=Angedd
 #: data/campaigns/Delfadors_Memoirs/scenarios/12_Terror_at_the_Ford_of_Parthyn.cfg:875
 msgid "Surprise, surprise..."
-msgstr "Sorpresa!"
+msgstr "Sorpresa, sorpresa..."
 
 #. [message]: speaker=Bled
 #: data/campaigns/Delfadors_Memoirs/scenarios/12_Terror_at_the_Ford_of_Parthyn.cfg:879
@@ -2697,7 +2697,7 @@ msgstr "Adran"
 #. [message]: speaker=Adran
 #: data/campaigns/Delfadors_Memoirs/scenarios/12_Terror_at_the_Ford_of_Parthyn.cfg:960
 msgid "Long live the King! Wait, you are not—"
-msgstr "Lunga vita la Re! Aspetta, non siete..."
+msgstr "Lunga vita la Re! Aspetta, non siete—"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/12_Terror_at_the_Ford_of_Parthyn.cfg:964
@@ -2789,7 +2789,7 @@ msgstr ""
 "Puoi avermi sconfitto, ma il grande Zorlan mi vendicherà! Ho compiuto il mio "
 "compito di attaccare il perimetro di Wesnoth, in questo modo nessuna forza "
 "di Wesnoth può venire ad aiutare il vostro esercito condannato. Sarà un "
-"massacro glorioso! "
+"massacro glorioso!"
 
 #. [message]: speaker=Dirator
 #: data/campaigns/Delfadors_Memoirs/scenarios/12_Terror_at_the_Ford_of_Parthyn.cfg:1235
@@ -3462,7 +3462,7 @@ msgstr "D’accordo, ma dobbiamo fare in fretta, il re è incalzato da vicino."
 #. [message]: id=Kalenz
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:276
 msgid "Victory!"
-msgstr "Vittoria! "
+msgstr "Vittoria!"
 
 #. [message]: id=Garard II
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:280
@@ -4394,12 +4394,12 @@ msgid ""
 "Undead veterans or by Delfador"
 msgstr ""
 "Soltanto uno dei tuoi non-morti veterani o Delfador può infliggere il colpo "
-"mortale a Iliah-Malal."
+"mortale a Iliah-Malal"
 
 #. [note]
 #: data/campaigns/Delfadors_Memoirs/scenarios/19_Showdown_in_the_Northern_Swamp.cfg:199
 msgid "The killing blow against Iliah-Malal can only be struck by Delfador"
-msgstr "Soltanto Delfador può infliggere il colpo mortale a Iliah-Malal."
+msgstr "Soltanto Delfador può infliggere il colpo mortale a Iliah-Malal"
 
 #. [message]: speaker=Iliah-Malal
 #: data/campaigns/Delfadors_Memoirs/scenarios/19_Showdown_in_the_Northern_Swamp.cfg:243
@@ -4467,7 +4467,7 @@ msgstr ""
 #. [message]: speaker=Lionel
 #: data/campaigns/Delfadors_Memoirs/scenarios/19_Showdown_in_the_Northern_Swamp.cfg:292
 msgid "Delfador... You raise undead?!"
-msgstr "Delfador...usi non-morti?!?"
+msgstr "Delfador...usi non-morti?!"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/19_Showdown_in_the_Northern_Swamp.cfg:297
@@ -4965,7 +4965,7 @@ msgstr "Le guardie sono sconfitte. Ora dobbiamo cercare il libro."
 #. [objective]: condition=win
 #: data/campaigns/Delfadors_Memoirs/scenarios/21_Clash_at_the_Manor.cfg:320
 msgid "Find the secret door to enter the manor"
-msgstr "Trova la porta segreta per entrare nel maniero."
+msgstr "Trova la porta segreta per entrare nel maniero"
 
 #. [message]: id=$unit.id
 #: data/campaigns/Delfadors_Memoirs/scenarios/21_Clash_at_the_Manor.cfg:346
@@ -5072,7 +5072,7 @@ msgstr ""
 "Il solito vecchio Delfador, arrogante, presuntuoso, metti sempre te stesso "
 "sopra gli altri. Ma sono diventato grande come te; ho dominato il Libro! Mi "
 "hai sempre sottovalutato, come Leollyn prima di te. Ora incontrerai il suo "
-"stesso destino. Sorgete, miei leali soldati! "
+"stesso destino. Sorgete, miei leali soldati!"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/22_Face_of_the_Enemy.cfg:171
@@ -5137,7 +5137,7 @@ msgid ""
 msgstr ""
 "L’ultima grande impresa di Delfador, dopo quella battaglia, racconta di come "
 "pose fine all’usurpazione di Asheviere e restaurò il legittimo <i>Erede al "
-"Trono</i>. R"
+"Trono</i>."
 
 #. [part]
 #: data/campaigns/Delfadors_Memoirs/scenarios/23_Epilogue.cfg:19
@@ -5381,6 +5381,12 @@ msgstr "Droni"
 #: data/campaigns/Delfadors_Memoirs/utils/sides.cfg:279
 msgid "Artor"
 msgstr "Artor"
+
+#~ msgid "Argh! It can't be, beaten by these swine!"
+#~ msgstr "Argh! Non può essere, sconfitto da questi porci!"
+
+#~ msgid "No! There is still more that I must do!"
+#~ msgstr "No! Devo fare ancora molto!"
 
 #~ msgid "Unuvim"
 #~ msgstr "Unuvim"
