--- a/po/wesnoth-dw/it.po
+++ b/po/wesnoth-dw/it.po
@@ -1,12 +1,12 @@
 #
 # Michele Maresi (mich) <maresi.michele@gmail.com> 2009-2013
-# Antonio 'Antro' Rosella <arosella@yahoo.com> 2013-2018
+# Antonio 'Antro' Rosella <arosella@yahoo.com> 2013-2019
 msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-02-12 17:01 UTC\n"
-"PO-Revision-Date: 2018-09-09 18:01+0200\n"
+"PO-Revision-Date: 2019-01-28 21:18+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italiano <wesnoth-l10n-it@cirulla.net>\n"
 "Language: it\n"
@@ -14,7 +14,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:13
@@ -89,7 +89,7 @@ msgstr ""
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:25
 msgid "(Intermediate level, 10 scenarios.)"
-msgstr "(Livello intermedio, 10 scenari)"
+msgstr "(Livello intermedio, 10 scenari.)"
 
 #. [about]
 #: data/campaigns/Dead_Water/_main.cfg:31
@@ -1784,6 +1784,8 @@ msgstr "Vlagnor"
 
 #. [message]: speaker=Vlagnor
 #: data/campaigns/Dead_Water/scenarios/07_Bilheld.cfg:124
+#, fuzzy
+#| msgid "What are you merfolk doing here?"
 msgid "What are you mermen doing here?"
 msgstr "Cosa ci fate voi nereidi qui?"
 
@@ -1809,6 +1811,10 @@ msgstr "Strega?"
 
 #. [message]: speaker=Vlagnor
 #: data/campaigns/Dead_Water/scenarios/07_Bilheld.cfg:144
+#, fuzzy
+#| msgid ""
+#| "She kill drakes. If you are her friend, we will kill you. We do not want "
+#| "MORE merfolk blasting and stabbing."
 msgid ""
 "She kill drakes. If you are her friend, we will kill you. We do not want "
 "MORE mermen blasting and stabbing."
@@ -2581,6 +2587,10 @@ msgstr "Mi unirò subito a voi! Quel mostro è troppo innaturale."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg:570
+#, fuzzy
+#| msgid ""
+#| "The merfolk clapped their hands over their ears as a terrible wail echoed "
+#| "off the castle walls."
 msgid ""
 "The mermen clapped their hands over their ears as a terrible wail echoed off "
 "the castle walls."
@@ -2807,6 +2817,14 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Dead_Water/scenarios/12_Revenge.cfg:17
+#, fuzzy
+#| msgid ""
+#| "The tribe that had fled Jotha unable to fight returned as an army "
+#| "stiffened by veteran fighters and led by a warrior king. Though they were "
+#| "tired from their journey, weariness fell from them as they neared home. "
+#| "The merfolk arrived during the night, and found the mouth of their bay "
+#| "guarded, so they headed south along the coast to some outlying villages "
+#| "to gather news of the invaders."
 msgid ""
 "The tribe that had fled Jotha unable to fight returned as an army stiffened "
 "by veteran fighters and led by a warrior king. Though they were tired from "
@@ -2878,6 +2896,8 @@ msgstr ""
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/12_Revenge.cfg:491
+#, fuzzy
+#| msgid "At dawn, the merfolk got a good look at their opponents."
 msgid "At dawn, the mermen got a good look at their opponents."
 msgstr "All’alba, i nereidi dettero uno sguardo accurato ai loro nemici."
 
@@ -3017,6 +3037,15 @@ msgstr "Epilogo"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/13_Epilogue.cfg:33
+#, fuzzy
+#| msgid ""
+#| "After destroying Mal-Ravanal’s henchmen, Kai Krellis awaited another "
+#| "attack. But it never came. Krellis sent some messengers south to discover "
+#| "what they could. The news that came back was better than good. Mal-"
+#| "Ravanal was dead! Soldiers of Wesnoth had defeated him at about the same "
+#| "time the merfolk had defeated the undead at Jotha. With the evil wizard "
+#| "gone, the merfolk relaxed and began rebuilding in earnest, and soon Jotha "
+#| "was restored."
 msgid ""
 "After destroying Mal-Ravanal’s henchmen, Kai Krellis awaited another attack. "
 "But it never came. Krellis sent some messengers south to discover what they "
@@ -3204,6 +3233,10 @@ msgstr "Nereide Cittadino"
 
 #. [unit_type]: id=Merman Citizen, race=merman
 #: data/campaigns/Dead_Water/units/Citizen.cfg:17
+#, fuzzy
+#| msgid ""
+#| "Merfolk are mostly peaceful, but will fight to defend their homes. In "
+#| "this situation, even merfolk with no weapons or training can be dangerous."
 msgid ""
 "Mermen are mostly peaceful, but will fight to defend their homes. In this "
 "situation, even mermen with no weapons or training can be dangerous."
@@ -3295,6 +3328,9 @@ msgstr "Tridente delle tempeste"
 
 #. [object]: id={ID}
 #: data/campaigns/Dead_Water/utils/items.cfg:11
+#, fuzzy
+#| msgid ""
+#| "This trident gives merfolk the power to throw lightning at their enemies."
 msgid "This weapon shoots powerful lightning bolts at your enemies."
 msgstr ""
 "Quest’arma permette ai nereidi di scagliare potenti fulmini contro loro "
@@ -3302,6 +3338,8 @@ msgstr ""
 
 #. [object]: id={ID}
 #: data/campaigns/Dead_Water/utils/items.cfg:13
+#, fuzzy
+#| msgid "Only the merfolk can use this item."
 msgid "Only a merman can use this item."
 msgstr "Solo un nereide può usare questo oggetto."
 
@@ -3433,7 +3471,7 @@ msgstr ""
 "successivo."
 
 #~ msgid "Now we must defeat the undead."
-#~ msgstr "Ora dobbiamo sconfiggere i non-morti"
+#~ msgstr "Ora dobbiamo sconfiggere i non-morti."
 
 #~ msgid "user_team_name^Merfolk"
 #~ msgstr "Nereidi"
