--- a/po/wesnoth-low/it.po
+++ b/po/wesnoth-low/it.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-27 01:26 UTC\n"
-"PO-Revision-Date: 2018-05-29 06:56-0700\n"
+"PO-Revision-Date: 2019-01-28 21:22+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <>\n"
 "Language: it\n"
@@ -14,7 +14,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n!=1);\n"
-"X-Generator: Poedit 2.0.6\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [campaign]: id=LOW, type=hybrid
 #: data/campaigns/Legend_of_Wesmere/_main.cfg:49
@@ -41,8 +41,10 @@ msgstr ""
 
 #. [campaign]: id=LOW, type=hybrid
 #: data/campaigns/Legend_of_Wesmere/_main.cfg:53
+#, fuzzy
+#| msgid "(Hard level, 18 scenarios.)"
 msgid "(Intermediate level, 18 scenarios.)"
-msgstr "(Livello intermedio, 18 scenari)"
+msgstr "(Livello per esperti, 18 scenari.)"
 
 #. [campaign]: id=LOW, type=hybrid
 #: data/campaigns/Legend_of_Wesmere/_main.cfg:55
@@ -666,7 +668,7 @@ msgstr "Cos’è questo? L’orco aveva del bottino!"
 #. [message]: id=Velon
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:584
 msgid "Flee, Kalenz... Our hopes ride with you..."
-msgstr "Fuggi, Kalenz... le nostre speranze cavalcano con te... "
+msgstr "Fuggi, Kalenz... le nostre speranze cavalcano con te..."
 
 #. [scenario]: id=02_Hostile_Mountains
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/02_Hostile_Mountains.cfg:11
@@ -975,7 +977,7 @@ msgstr ""
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/03_Kalian_under_Attack.cfg:772
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:298
 msgid "Defeat all enemy leaders."
-msgstr "Sconfiggi tutti i comandanti nemici"
+msgstr "Sconfiggi tutti i comandanti nemici."
 
 #. [objective]: condition=lose
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/03_Kalian_under_Attack.cfg:784
@@ -1061,7 +1063,7 @@ msgstr ""
 #. [objective]: condition=win
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/03_Kalian_under_Attack.cfg:851
 msgid "Hold on until turns run out."
-msgstr "Resisti fino alla fine dei turni"
+msgstr "Resisti fino alla fine dei turni."
 
 #. [message]: id=guard
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/03_Kalian_under_Attack.cfg:888
@@ -1528,7 +1530,7 @@ msgid ""
 msgstr ""
 "Ma l’oro del Ka’lian è del Ka’lian. Vorresti che noi dividessimo le nostre "
 "forze, inviandone una parte indietro mentre il resto prova il tuo colpo del "
-"tuono?  "
+"tuono?"
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/05_The_Saurian_Treasury.cfg:502
@@ -1538,7 +1540,7 @@ msgid ""
 msgstr ""
 "Il dubbio di Cleodil è legittimo. Soltanto un comandante sciocco divide le "
 "sue forze in presenza di un inferiorità numerica: farlo significa invitare a "
-"nozze il nemico. "
+"nozze il nemico."
 
 #. [message]: id=Cleodil
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/05_The_Saurian_Treasury.cfg:506
@@ -1628,7 +1630,7 @@ msgstr ""
 #. [message]: id=Olurf
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/06_Acquaintance_in_Need.cfg:281
 msgid "For an elf, you think like a dwarf! I think I like you! "
-msgstr "Per essere un elfo, pensi proprio come un nano! Cominci a piacermi!"
+msgstr "Per essere un elfo, pensi proprio come un nano! Cominci a piacermi! "
 
 #. [message]: id=Olurf
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/06_Acquaintance_in_Need.cfg:281
@@ -1715,7 +1717,7 @@ msgstr ""
 #. [scenario]: id=07_Elves_Last_Stand
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:17
 msgid "Elves’ Last Stand"
-msgstr "L’ultima resistenza degli elfi."
+msgstr "L’ultima resistenza degli elfi"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:22
@@ -1822,7 +1824,7 @@ msgid ""
 "slaughter."
 msgstr ""
 "È davvero uno giorno oscuro quello nel quale gli elfi devono corazzarsi con "
-"sogni di massacro. "
+"sogni di massacro."
 
 #. [message]: id=Urug-Pir
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:426
@@ -2019,7 +2021,7 @@ msgstr "Landar"
 msgid ""
 "Aargh! I should have stayed in the mountains instead of joining the orcs!"
 msgstr ""
-"Aargh! Sarei dovuto rimanere sulle montagne invece di unirmi agli orchi."
+"Aargh! Sarei dovuto rimanere sulle montagne invece di unirmi agli orchi!"
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:602
@@ -2038,7 +2040,7 @@ msgid ""
 "precious citadel burned and razed."
 msgstr ""
 "Bacia-alberi, devi essermi grato perché ti ho risparmiato la vista "
-"terrificante della tua preziosa cittadella bruciata e distrutta. "
+"terrificante della tua preziosa cittadella bruciata e distrutta."
 
 #. [message]: speaker=unit
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:631
@@ -3513,7 +3515,7 @@ msgstr ""
 msgid "We cannot be choosy about our allies when our need is dire."
 msgstr ""
 "Non possiamo essere schizzinosi per quanto concerne i nostri alleati quando "
-"ne abbiamo un bisogno disperato. "
+"ne abbiamo un bisogno disperato."
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:310
@@ -3570,7 +3572,7 @@ msgid ""
 "We are too few to defeat the enemy without them."
 msgstr ""
 "Va bene... Ma avete notizie delle truppe degli elfi in marcia per unirsi a "
-"noi? Siamo troppo pochi per poter sconfiggere il nemico senza di loro!"
+"noi? Siamo troppo pochi per poter sconfiggere il nemico senza di loro."
 
 #. [message]: id=Aldun
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:352
@@ -3624,7 +3626,7 @@ msgid ""
 msgstr ""
 "No, non lo è. Ma se non sconfiggiamo questi orchi qui e adesso le nostre "
 "divisioni diventeranno tutte dettagli. Accetterò qualsiasi braccio armato e "
-"glie ne sarò grato.  "
+"glie ne sarò grato."
 
 #. [unit]: type=Paladin, id=Kulrad
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:543
@@ -3656,7 +3658,7 @@ msgstr "Abbiamo fermato gli orchi ancora una volta!"
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:605
 msgid "And we revived the alliance with the Humans, which is no small thing."
 msgstr ""
-"E abbiamo rinnovato l’antica alleanza con gli uomini, che non è cosa da poco!"
+"E abbiamo rinnovato l’antica alleanza con gli uomini, che non è cosa da poco."
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/14_Human_Alliance.cfg:609
@@ -5254,7 +5256,7 @@ msgid ""
 msgstr ""
 "Se una fata sviluppa un legame speciale con una persona, il potere curativo "
 "cresce nei confronti di quest’ultima. Ciò permette a Cleodil di curare "
-"Kalenz con maggiore efficacia ad ogni inizio del turno.  "
+"Kalenz con maggiore efficacia ad ogni inizio del turno."
 
 #: data/campaigns/Legend_of_Wesmere/utils/characters.cfg:55
 msgid "Huraldur"
