--- a/po/wesnoth-nr/it.po
+++ b/po/wesnoth-nr/it.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:31 UTC\n"
-"PO-Revision-Date: 2018-09-09 18:04+0200\n"
+"PO-Revision-Date: 2019-01-28 21:10+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italiano <wesnoth-l10n-it@cirulla.net>\n"
 "Language: it\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [campaign]: id=Northern_Rebirth
 #: data/campaigns/Northern_Rebirth/_main.cfg:9
@@ -135,6 +135,14 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Northern_Rebirth/scenarios/01_Breaking_the_Chains.cfg:23
+#, fuzzy
+#| msgid ""
+#| "The dwarves of Knalga, cannily reckoning the gains from trade, built "
+#| "strong fortifications around Dwarven Doors. The people who called it "
+#| "home, dwarven and human alike, knew that the wealth of their city might "
+#| "arouse envy from afar — hence they kept their weapons sharp, and reckoned "
+#| "themselves well able to fight off any bandit gang or petty warlord that "
+#| "could arise in the thinly-settled Northlands."
 msgid ""
 "The dwarves of Knalga, cannily reckoning the gains from trade, built strong "
 "fortifications around Dwarven Doors. The people who called it home, dwarven "
@@ -2415,12 +2423,17 @@ msgstr ""
 
 #. [message]: speaker=Sister Thera
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:744
+#, fuzzy
+#| msgid ""
+#| "If you have no objection, Tallin, we would like to join you. These "
+#| "Northlands are hardly safe these days for anyone to be traveling on their "
+#| "own, and we could lend valuable help to your cause."
 msgid ""
 "If you have no objection, Tallin, we would like to join you. These "
 "northlands are hardly safe these days for anyone to be traveling on their "
 "own, and we could lend valuable help to your cause."
 msgstr ""
-"Se non hai obiezioni, Tallin vorremmo unirci a voi. Queste Terre del Nord "
+"Se non hai obiezioni, Tallin, vorremmo unirci a voi. Queste Terre del Nord "
 "non sono sicure in questi giorni per chiunque viaggi da solo e noi potremmo "
 "essere un aiuto prezioso per la tua causa."
 
@@ -3258,6 +3271,12 @@ msgstr ""
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/05a_01_The_Pursuit.cfg:2057
+#, fuzzy
+#| msgid ""
+#| "I am afraid times have changed much. Our first king, Haldric I, fled the "
+#| "Green Isle with the Wesfolk, the orcs in pursuit. He came ashore on this "
+#| "land that we now call the Great Continent and destroyed the Lich-Lord "
+#| "Jevyan before founding the Kingdom of Wesnoth. That was centuries ago."
 msgid ""
 "I am afraid times have changed much. Our first king, Haldric I, fled from "
 "the Green Isle with the Wesfolk and the orcs in pursuit. He came ashore on "
@@ -4902,8 +4921,10 @@ msgstr "Ro’Sothian"
 
 #. [objective]: condition=win
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:323
+#, fuzzy
+#| msgid "Save Stalrag from Ro’Sothian"
 msgid "Save Stalrag from Ro’Sothian."
-msgstr "Salva Stalrag da Ro’Sothian."
+msgstr "Salva Stalrag da Ro’Sothian"
 
 #. [objective]: condition=lose
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:327
@@ -4913,8 +4934,10 @@ msgstr "Morte di Tallin."
 #. [objective]: condition=lose
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:331
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:701
+#, fuzzy
+#| msgid "Death of Stalrag"
 msgid "Death of Stalrag."
-msgstr "Morte di Stalrag."
+msgstr "Morte di Stalrag"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:350
@@ -5229,8 +5252,10 @@ msgstr "Di nuovo in prigione, amico mio."
 
 #. [objective]: condition=win
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:693
+#, fuzzy
+#| msgid "Capture Ro’Arthian"
 msgid "Capture Ro’Arthian."
-msgstr "Cattura Ro’Arthian."
+msgstr "Cattura Ro’Arthian"
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg:735
@@ -7120,6 +7145,12 @@ msgstr ""
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/09a_Introductions.cfg:240
+#, fuzzy
+#| msgid ""
+#| "Princess, we are not seeking to do business here: <i>“I do this for you "
+#| "and you do this for me.”</i> No, we seek to build everlasting friendships "
+#| "which will forever ensure the peace and prosperity of these Northlands. "
+#| "Therefore, let there be no talk of debts and repayments between us."
 msgid ""
 "Princess, we are not seeking to do business here: <i>“I do this for you and "
 "you do this for me.”</i> No, we seek to build everlasting friendships which "
@@ -10102,6 +10133,12 @@ msgstr ""
 #. [message]: speaker=narrator
 #: data/campaigns/Northern_Rebirth/scenarios/14a_Epilogue.cfg:411
 #: data/campaigns/Northern_Rebirth/scenarios/14a_Epilogue.cfg:432
+#, fuzzy
+#| msgid ""
+#| "On Father Morvin’s advice, the Council approached all the different "
+#| "orcish tribes and made treaties with them. If a chieftain refused to "
+#| "cooperate with the Alliance, he was forcibly removed from his post and a "
+#| "more favorably-disposed leader put in his place."
 msgid ""
 "On Father Morvin’s advice, the Council approached all the different orcish "
 "tribes and made treaties with them. If a chieftain refused to cooperate with "
@@ -10663,6 +10700,9 @@ msgstr "Arthian"
 #~ msgid "Here is a similar door as the one before. I try to open it."
 #~ msgstr "Qui c’è una porta simile alla precedente. Provo ad aprirla."
 
+#~ msgid "Turns run out"
+#~ msgstr "Fine dei turni"
+
 #~ msgid "Clear the mines"
 #~ msgstr "La liberazione delle Miniere"
 
@@ -10725,9 +10765,6 @@ msgstr "Arthian"
 #~ msgid "‘The master’s study’ eh? I bet we’ll find Malifor there!"
 #~ msgstr ""
 #~ " “Il laboratorio del padrone” eh? Scommetto che ci troveremo Malifor!"
-
-#~ msgid "Turns run out"
-#~ msgstr "Fine dei turni"
 
 #~ msgid "Death of Tallin or Stalrag."
 #~ msgstr "Morte di Tallin o Stalrag."
