--- a/po/wesnoth-tutorial/it.po
+++ b/po/wesnoth-tutorial/it.po
@@ -1,13 +1,13 @@
 # translation of it.po to Italian
 # Luciano Montanaro <mikelima@cirulla.net>, 2006, 2007, 2008, 2009, 2010, 2011.
-# Antonio Rosella <arosella@yahoo.com>, 2012-2018.
+# Antonio Rosella <arosella@yahoo.com>, 2012-2019.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:31 UTC\n"
-"PO-Revision-Date: 2018-09-09 17:57+0200\n"
+"PO-Revision-Date: 2019-01-27 11:48+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italiano <wesnoth-l10n-it@cirulla.net>\n"
 "Language: it\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [lua]: wml_actions.select_character
 #: data/campaigns/tutorial/lua/character_selection.lua:26
@@ -150,6 +150,14 @@ msgstr "Movimento"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/01_Tutorial_part_1.cfg:211
+#, fuzzy
+#| msgid ""
+#| "When you hover over or select a unit, in this case Konrad, the places he "
+#| "can move to are highlighted. All units have a certain number of "
+#| "<i>movement points</i>, which dictate how many hexes that unit can move "
+#| "per turn. Normally, moving one hex on flat terrain uses one movement "
+#| "point. To move, simply click on Konrad and then your destination. (You "
+#| "can press <b>u</b> to undo a move if you move to the wrong place.)"
 msgid ""
 "When you select a unit, in this case Konrad, the places he can move to are "
 "highlighted. All units have a certain number of <i>movement points</i>, "
@@ -168,6 +176,14 @@ msgstr ""
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/01_Tutorial_part_1.cfg:219
+#, fuzzy
+#| msgid ""
+#| "When you hover over or select a unit, in this case Li’sar, the places she "
+#| "can move to are highlighted. All units have a certain number of "
+#| "<i>movement points</i>, which dictate how many hexes that unit can move "
+#| "per turn. Normally, moving one hex on flat terrain uses one movement "
+#| "point. To move, simply click on Li’sar and then your destination. (You "
+#| "can press <b>u</b> to undo a move if you move to the wrong place.)"
 msgid ""
 "When you select a unit, in this case Li’sar, the places she can move to are "
 "highlighted. All units have a certain number of <i>movement points</i>, "
@@ -176,23 +192,28 @@ msgid ""
 "your destination. (You can press <b>u</b> to undo a move if you move to the "
 "wrong place.)"
 msgstr ""
-"Quando selezioni una unità, in questo caso Li’sar, le caselle dove può "
-"muoversi vengono evidenziate. Tutte le unità hanno dei <i>punti movimento</"
-"i>, che limitano il numero di esagoni percorribili da una unità in un turno "
-"di gioco. Normalmente, muoversi di un esagono consuma un punto movimento. "
-"Per muovere una unità, clicca semplicemente sulla destinazione desiderata. "
-"(Puoi sempre premere il tasto <b>u</b> per annullare una mossa se pensi di "
-"esserti mosso in un posto sbagliato.)"
+"Quando passi il cursore sopra una unità o la selezioni, in questo caso "
+"Li’sar, vengono evidenziale le caselle dove può muoversi. Tutte le unità "
+"hanno dei <i>punti movimento</i> che limitano il numero di esagoni "
+"percorribili da una unità in un turno di gioco. Normalmente, muoversi di un "
+"esagono consuma un punto movimento. Per muovere una unità, clicca "
+"semplicemente sulla destinazione desiderata. (Puoi sempre premere il tasto "
+"<b>u</b> per annullare una mossa se pensi di esserti mosso in un posto "
+"sbagliato.)"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/01_Tutorial_part_1.cfg:230
+#, fuzzy
+#| msgid "Move Konrad next to Delfador"
 msgid "Move Konrad next to Delfador."
-msgstr "Sposta Konrad vicino a Delfador."
+msgstr "Sposta Konrad vicino a Delfador"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/01_Tutorial_part_1.cfg:232
+#, fuzzy
+#| msgid "Move Li’sar next to Delfador"
 msgid "Move Li’sar next to Delfador."
-msgstr "Sposta Li’sar vicino a Delfador."
+msgstr "Sposta Li’sar vicino a Delfador"
 
 #. [message]: speaker=student
 #: data/campaigns/tutorial/scenarios/01_Tutorial_part_1.cfg:249
@@ -232,7 +253,7 @@ msgstr "... Questa quintana!"
 #. [message]: speaker=student
 #: data/campaigns/tutorial/scenarios/01_Tutorial_part_1.cfg:318
 msgid "A quintain? You want me to fight a dummy?"
-msgstr "Una quintana? Vuoi che combatta contro un fantoccio?!"
+msgstr "Una quintana? Vuoi che combatta contro un fantoccio?"
 
 #. [message]: speaker=student
 #: data/campaigns/tutorial/scenarios/01_Tutorial_part_1.cfg:319
@@ -265,25 +286,35 @@ msgstr "Attacco"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/01_Tutorial_part_1.cfg:340
+#, fuzzy
+#| msgid ""
+#| "To attack the quintain, first select the attacker (Konrad), then the "
+#| "target (the quintain). You will see an attack description. Click "
+#| "<b>Attack</b> when you’re ready."
 msgid ""
 "To attack the quintain, first select the attacker (Konrad), then the target "
 "(the quintain). You will see an attack description. When you click <b>OK</"
 "b>, Konrad will attack."
 msgstr ""
 "Per attaccare la quintana, seleziona prima l’attaccante (Konrad) e poi il "
-"bersaglio (la quintana). Vedrai una descrizione relativa all’attacco. "
-"Facendo clic su <b>OK</b>, Konrad attaccherà."
+"bersaglio (la quintana). Vedrai una descrizione relativa all’attacco. Clicca "
+"<b>Attacca</b>quando sei pronto."
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/01_Tutorial_part_1.cfg:347
+#, fuzzy
+#| msgid ""
+#| "To attack the quintain, first select the attacker (Li’sar), then the "
+#| "target (the quintain). You will see an attack description. Click "
+#| "<b>Attack</b> when you’re ready."
 msgid ""
 "To attack the quintain, first select the attacker (Li’sar), then the target "
 "(the quintain). You will see an attack description. When you click <b>OK</"
 "b>, Li’sar will attack."
 msgstr ""
 "Per attaccare la quintana, seleziona prima l’attaccante (Li’sar ) e poi il "
-"bersaglio (la quintana). Vedrai una descrizione relativa all’attacco. "
-"Facendo clic su <b>OK</b>, Li’sar attaccherà."
+"bersaglio (la quintana). Vedrai una descrizione relativa all’attacco. Clicca "
+"su <b>Attacca</b> quando sei pronto."
 
 #. [message]: speaker=student
 #: data/campaigns/tutorial/scenarios/01_Tutorial_part_1.cfg:362
@@ -1295,6 +1326,13 @@ msgstr "Tabella di stato"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:376
+#, fuzzy
+#| msgid ""
+#| "The Status Table details the sides’ current status and starting "
+#| "conditions. Fog and shroud will affect what you can see in this table, "
+#| "and occasionally a side may be hidden; however, it is still useful to "
+#| "check this table when a scenario begins. You can access it in the "
+#| "<b>Menu</b> menu."
 msgid ""
 "The Status Table details the sides’ current status and starting conditions. "
 "Fog and shroud will affect what you can see in this table, and occasionally "
@@ -1303,9 +1341,10 @@ msgid ""
 msgstr ""
 "La Tabella di stato descrive dettagliatamente che condizioni attuali e "
 "quelle iniziali della tua squadra. La nebbia di guerra e l’oscurità "
-"condizioneranno ciò che puoi vedere in questa tabella, e occasionalmente una "
-"intera squadra può essere nascosta. È utile dare un’occhiata a questa "
-"tabella quando inizia un nuovo scenario."
+"condizioneranno ciò che puoi vedere in questa tabella, e occasionalmente può "
+"essere nascosta anche una intera squadra. È utile dare un’occhiata a questa "
+"tabella quando inizia un nuovo scenario. Puoi accedere alla tabella dal menu "
+"<b>Menu</b>."
 
 #. [message]: speaker=Galdrad
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:394
@@ -1347,6 +1386,14 @@ msgstr ""
 
 #. [message]: speaker=Galdrad
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:411
+#, fuzzy
+#| msgid ""
+#| "You could. However, elves (and orcs) have bad <i>defense</i> in water. "
+#| "You’ll be more vulnerable as you try to wade slowly across the ford; the "
+#| "enemy will have an 80% chance to hit you. Since elves have good defense "
+#| "in the forest, I would advise you keep to the trees and attack the orcs "
+#| "from there; your Fighters will only suffer a 40% chance of being hit in "
+#| "return, while Shamans and Archers will only incur a 30% chance."
 msgid ""
 "You could. However, elves (and orcs) have bad <i>defense</i> in water. "
 "You’ll be more vulnerable as you try to wade slowly across the ford; the "
@@ -1359,8 +1406,9 @@ msgstr ""
 "ad attraversare lentamente il guado: il nemico avrebbe l’80% di probabilità "
 "di colpirti. Visto che invece gli elfi hanno una buona difesa quando sono "
 "trai boschi, ti consiglio di rimanere tra gli alberi ed attaccare da li gli "
-"orchi: le tue unità avranno soltanto il 40% di probabilità di essere colpite "
-"nel contrattacco."
+"orchi: i tuoi elfi combattenti avranno soltanto il 40% di probabilità di "
+"essere colpiti nel contrattacco, mentre le sciamane e gli arceri soltanto il "
+"30%."
 
 #. [message]: speaker=Galdrad
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:416
@@ -1665,6 +1713,13 @@ msgstr "Periodo della giornata"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:661
+#, fuzzy
+#| msgid ""
+#| "During a scenario, the time of day will shift as turns pass. There are "
+#| "four <i>alignments</i> a unit may be: Lawful, Neutral, Chaotic, or "
+#| "Liminal. Each alignment gets a different bonus or handicap depending on "
+#| "the time of day. You can hover over the sky image below the minimap on "
+#| "the right to see the current time of day and who has the advantage."
 msgid ""
 "During a scenario, the time of day will shift as turns pass. There are four "
 "<i>alignments</i> a unit may be: Lawful, Neutral, Chaotic, or Liminal. Each "
@@ -1675,7 +1730,7 @@ msgstr ""
 "Durante uno scenario, il periodo della giornata avanza man mano che i turni "
 "si susseguono. Una unità può appartenere ad uno dei quattro possibili "
 "<i>allineamenti</i>: legale, neutrale, caotico o liminale. Ogni allineamento "
-"ottiene dei bonus o malus a seconda del periodo del giorno. Punta il mouse "
+"ottiene dei bonus o malus a seconda del periodo del giorno. Muovi il cursore "
 "sull’immagine panoramica sotto la minimappa sulla destra per vedere quale "
 "sia il periodo della giornata al momento e chi ha dei vantaggi."
 
@@ -1726,6 +1781,11 @@ msgstr "Condizioni di vittoria"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:703
+#, fuzzy
+#| msgid ""
+#| "In this scenario, you only need to defeat the orc leader to win. Victory "
+#| "conditions for a scenario are given under <b>Scenario Objectives</b> in "
+#| "the <b>Menu</b> menu."
 msgid ""
 "In this scenario, you only need to defeat the orc leader to win. Victory "
 "conditions for a scenario are given under <b>Scenario Objectives</b> in  "
@@ -1733,7 +1793,7 @@ msgid ""
 msgstr ""
 "In questo scenario, per vincere ti basta sconfiggere il condottiero degli "
 "orchi. Le condizioni di vittoria di uno scenario sono riportate alla voce "
-"<b>Obiettivi dello scenario</b> nel <b>Menù principale</b>)."
+"<b>Obiettivi dello scenario</b> nel <b>Menù principale</b>."
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:712
@@ -1808,14 +1868,21 @@ msgstr ""
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:859
+#, fuzzy
+#| msgid ""
+#| "You are close to killing their leader! Because he is second level, the "
+#| "unit who finishes him will gain 16 experience points. In a campaign, it’s "
+#| "important to decide which units you want to advance, and give those units "
+#| "the best chances to gain experience."
 msgid ""
 "You are close to killing their leader! The unit who finishes him will gain "
 "16 experience points because he is second level. Choose your attacking unit "
 "carefully!"
 msgstr ""
-"Stai per uccidere il loro condottiero! L’unità che lo finirà guadagnerà 16 "
-"punti esperienza, perché è di livello 2. Scegli con attenzione l’unità da "
-"usare!"
+"Stai per uccidere il loro condottiero! Siccome è di livello 2, l’unità che "
+"lo finirà guadagnerà 16 punti esperienza. In una campagna, è importante "
+"decidere quali untà vuoi far avanzare e dare loro le migliori opportunità "
+"per guadagnare esperienza."
 
 #. [message]: speaker=Galdrad
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:884
@@ -1912,15 +1979,21 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:1010
+#, fuzzy
+#| msgid ""
+#| "Advancing a level has fully healed me! When attacking, I always have at "
+#| "least a 60% chance of hitting with my longbow thanks to my <i>Marksman</"
+#| "i> ability, and I deal 9 damage each for 4 attacks. Use me to dislodge "
+#| "hard-to-hit units."
 msgid ""
 "Advancing a level has fully healed me! I always have a 60% chance of hitting "
 "with my <i>Marksman</i> ability, and I deal 9 damage each for 4 attacks. Use "
 "me to dislodge hard-to-hit units."
 msgstr ""
-"Avanzando di un livello ho recuperato tutti i punti ferita! Ho sempre una "
-"probabilità di colpire del 60% grazie alla mia abilità <i>tiro di "
-"precisione</i> e causerò 9 danni per ciascuno dei miei 4 attacchi. "
-"Utilizzami per eliminare le unità più difficili da abbattere."
+"Avanzando di un livello ho recuperato tutti i punti ferita! Col mio arco "
+"lungo, Ho sempre una probabilità di colpire del 60% grazie alla mia abilità "
+"<i>tiro di precisione</i> e causerò 9 danni per ciascuno dei miei 4 "
+"attacchi. Utilizzami per eliminare le unità più difficili da abbattere."
 
 #. [message]: speaker=unit
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:1011
@@ -1935,10 +2008,10 @@ msgid ""
 "hitting with my <i>Marksman</i> ability, and I deal 9 damage each for 4 "
 "attacks. Use me to dislodge hard-to-hit units."
 msgstr ""
-"Avanzando di un livello ho recuperato tutti i punti ferita! Ho sempre una "
-"probabilità di colpire del 60% grazie alla mia abilità <i>tiro di "
-"precisione</i> e causerò 9 danni per ciascuno dei miei 4 attacchi. "
-"Utilizzami per eliminare le unità più difficili da abbattere."
+"Avanzando di un livello ho recuperato tutti i punti ferita! Col mio arco "
+"lungo, ho sempre una probabilità di colpire del 60% grazie alla mia abilità "
+"<i>tiro di precisione</i> e causerò 9 danni per ciascuno dei miei 4 "
+"attacchi. Utilizzami per eliminare le unità più difficili da abbattere."
 
 #. [message]: speaker=unit
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:1024
@@ -2007,7 +2080,7 @@ msgstr ""
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:1078
 msgid "female^That... was foolish. Next time I should be more careful."
 msgstr ""
-"Questo...  è stato stupido. La prossima volta dovrò prestare più attenzione."
+"Questo... è stato stupido. La prossima volta dovrò prestare più attenzione."
 
 #. [message]: speaker=unit
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:1101
@@ -2090,6 +2163,11 @@ msgstr ""
 "\n"
 "<big>Premi un tasto del mouse o la barra spaziatrice per continuare...</big>"
 
+#~ msgid "To undo your last move, press <b>u</b> or use the right-click menu."
+#~ msgstr ""
+#~ "Per annullare l’ultima mossa, premere <b> u </b> o utilizzare il menu "
+#~ "disponibile cliccando col tasto destro del mouse."
+
 #~ msgid "Village"
 #~ msgstr "Villaggio"
 
@@ -2102,6 +2180,38 @@ msgstr ""
 #~ msgstr ""
 #~ "Fermati! Hai bisogno di raggruppare le tue forze. O forse hai intenzione "
 #~ "di combattere gli orchi con una mano sola?"
+
+#~ msgid "You have almost finished the tutorial"
+#~ msgstr "Hai quasi finito il tutorial"
+
+#~ msgid ""
+#~ "In a campaign you may have ten or even twenty scenarios to build your "
+#~ "army, but this tutorial will conclude after you defeat Thrag."
+#~ msgstr ""
+#~ "In una campagna potresti avere dieci o anche venti scenari per costruire "
+#~ "il tuo esercito, ma questo tutorial si concluderà dopo aver sconfitto "
+#~ "Thrag."
+
+#~ msgid ""
+#~ "You have beaten the orcs! You may want to try one of the rookie-level "
+#~ "campaigns next, which include strategy hints. <i>A Tale of Two Brothers</"
+#~ "i> is the easiest and is the recommended first campaign. In <i>An Orcish "
+#~ "Incursion</i> you have an Elvish army, similarly to this tutorial, but "
+#~ "with seven scenarios for your units to gain experience and advance levels."
+#~ msgstr ""
+#~ "Hai battuto gli orchi! Ti consiglio ora di provare una delle campagne di "
+#~ "livello principiante, che includono suggerimenti di strategia. <i>Un "
+#~ "racconto of due fratelli</i> è il più semplice ed è quella che ti "
+#~ "consiglio come prima campagna. In <i>Un’Incursione Orchesca</i> hai un "
+#~ "esercito elfico, analogamente a questo tutorial, ma con sette scenari per "
+#~ "le tue unità per guadagnare esperienza e avanzare di livello."
+
+#~ msgid ""
+#~ "You can also refer to the in-game help browser if you ever need to "
+#~ "refresh your memory on gameplay mechanics."
+#~ msgstr ""
+#~ "Puoi anche fare riferimento al browser di aiuto in-gioco se hai bisogno "
+#~ "di rinfrescare la memoria sulle meccaniche di gioco."
 
 #~ msgid "End Scenario"
 #~ msgstr "Fine scenario"
